# zerodrive

./: .gitignore  Cargo.toml  README.md  integration_test.sh
res/values/: colors.xml  styles.xml
src/: blob_store.rs  crypto_stream.rs  daemon.rs  derive.rs  lib.rs  main.rs  manifest.rs  output.rs  pointer.rs  prompt.rs  web.rs
src/android/: activity.rs  mod.rs  runtime.rs
src/android/java/com/zerodrive/app/: MainActivity.java
