[package]
name = "zerodrive"
version = "0.1.0"
edition = "2021"
description = "Decentralized, secure file drive over Nostr"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = "0.19"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-core = "0.3"

# Crypto
bip39 = { version = "2", features = ["rand"] }
bip32 = "0.5"
secp256k1 = { version = "0.29", features = ["global-context"] }
hkdf = "0.12"
sha2 = "0.10"
subtle = "2"
aes-gcm = "0.10"
aead = { version = "0.5", features = ["stream"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
getrandom = "0.2"
hex = "0.4"

# Secure prompt
rpassword = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Networking
nostr-sdk = { version = "0.38", features = ["nip06"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "multipart", "rustls-tls", "http2"] }

# Error handling
anyhow = "1"
bytes = "1"
thiserror = "2"

# Logging / output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4"
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem paths
dirs = "6"

# Progress bars
indicatif = "0.17"

# File locking
fs2 = "0.4"

# Web server
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

[package.metadata.android]
use_aapt2 = true
package = "com.zerodrive.app"
java_sources = "src/android/java"
resources = "res"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 35

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "android"

[package.metadata.android.application]
label = "ZeroDrive"
theme = "@style/AppTheme"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.application.activity]]
name = ".MainActivity"
config_changes = "orientation|keyboardHidden|screenSize"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]
